--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:prettier": "prettier {src,mock}/**/*.{html,vue,css,sass,scss,ts,md} --write",
     "lint:eslint": "eslint {library,src}/**/*.{vue,ts,tsx} --fix",
     "prepare": "husky install",
-    "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx"
+    "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
+    "test": "jest"
   },
   "lint-staged": {
     "*.{vue,js,ts}": "eslint --fix"
@@ -23,10 +24,14 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-vue": "^2.3.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
@@ -34,18 +39,22 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.6.0",
     "husky": "^7.0.0",
+    "jest": "^26.6.3",
     "less": "^4.1.2",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.6.9",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.9.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-global-api": "^0.4.1",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.29.8"
   },
   "config": {
