--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint:eslint": "eslint {library,src}/**/*.{vue,ts,tsx} --fix",
     "prepare": "husky install",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
-    "test": "jest"
+    "test": "jest",
+    "babel": "babel src --out-dir dist --extensions \".ts\""
   },
   "lint-staged": {
     "*.{vue,js,ts}": "eslint --fix"
   },
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.9",
     "@vue/eslint-config-prettier": "^7.0.0",
     "axios": "^0.26.1",
     "element-plus": "^2.1.8",
@@ -24,6 +26,10 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/jest": "^27.4.1",
@@ -31,7 +37,10 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-vue": "^2.3.0",
+    "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/test-utils": "^2.0.0-rc.18",
+    "babel-jest": "26.3.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
@@ -43,12 +52,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.6.0",
     "husky": "^7.0.0",
-    "jest": "^26.6.3",
+    "jest": "26.6.3",
     "less": "^4.1.2",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.5.4",
+    "typescript": "^4.6.3",
     "unplugin-auto-import": "^0.6.9",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.9.0",
@@ -61,5 +70,11 @@
     "commitizen": {
       "path": "./node_modules/cz-customizable"
     }
-  }
+  },
+  "moduleFileExtensions": [
+    "js",
+    "jsx",
+    "json",
+    "vue"
+  ]
 }
