--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myblog",
   "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "serve": "vite",
     "build": "vue-tsc --noEmit && vite build",
