--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "unplugin-auto-import": "^0.6.9",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.9.0",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-global-api": "^0.4.1",
     "vue-jest": "^5.0.0-alpha.10",
