--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "axios": "^0.26.1",
     "element-plus": "^2.1.8",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
@@ -35,6 +36,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-vue": "^2.3.0",
