--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
+    "@kangc/v-md-editor": "^2.3.15",
     "@vue/eslint-config-prettier": "^7.0.0",
     "axios": "^0.26.1",
     "element-plus": "^2.1.8",
@@ -37,6 +38,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/nprogress": "^0.2.0",
+    "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-vue": "^2.3.0",
