--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "scripts": {
     "serve": "vite",
-    "build": "vite build",
+    "dev:ssr": "cross-env NODE_ENV=development node server.js",
+    "prod:ssr": "cross-env NODE_ENV=production node server.js",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --outDir dist/server --ssr src/entry-server.ts",
     "preview": "vite preview",
     "lint:prettier": "prettier {src,mock}/**/*.{html,vue,css,sass,scss,ts,md} --write",
     "lint:eslint": "eslint {library,src}/**/*.{vue,ts,tsx} --fix",
@@ -23,6 +26,9 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "axios": "^0.26.1",
     "element-plus": "^2.1.8",
+    "express": "^4.18.1",
+    "koa": "^2.13.4",
+    "koa-connect": "^2.1.0",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
@@ -36,6 +42,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/jest": "^27.4.1",
+    "@types/koa": "^2.13.4",
     "@types/node": "^17.0.23",
     "@types/nprogress": "^0.2.0",
     "@types/prismjs": "^1.26.0",
@@ -47,6 +54,7 @@
     "babel-jest": "26.3.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "commitizen": "^4.2.4",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
     "eslint": "^8.12.0",
