--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "lint:eslint": "eslint {library,src}/**/*.{vue,ts,tsx} --fix",
     "prepare": "husky install",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
-    "test": "jest",
-    "babel": "babel src --out-dir dist --extensions \".ts\""
+    "test": "jest"
   },
   "lint-staged": {
     "*.{vue,js,ts}": "eslint --fix"
@@ -25,6 +24,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
     "@kangc/v-md-editor": "^2.3.15",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/server-renderer": "^3.2.33",
     "axios": "^0.26.1",
     "element-plus": "^2.1.8",
     "koa": "^2.13.4",
@@ -36,10 +36,6 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/jest": "^27.4.1",
